--- a/app/styles/pages/_responsive.scss
+++ b/app/styles/pages/_responsive.scss
@@ -15,7 +15,8 @@
 .media-box {
   border-collapse: collapse;
   border-spacing: 0;
-  min-width: 500px;
+  width: 100%;
+  max-width: 500px;
 }
 
 .media-row {
