--- a/app/styles/_variables.scss
+++ b/app/styles/_variables.scss
@@ -9,6 +9,7 @@ $title-font-family: "Roboto Condensed", "Arial", sans-serif;
 $code-font-family: "Consolas", "Andale Mono", monospace;
 
 $white-color: #fff;
+$body-color: #333;
 $main-color: "";
 $hover-color: "";
 $dark-color: "";
