--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -16,6 +16,7 @@
 @import "utils/z-index";
 
 @import "controls/header";
+@import "controls/footer";
 @import "controls/pager";
 
 #responsive-page {
