--- a/app/styles/styles.scss
+++ b/app/styles/styles.scss
@@ -19,6 +19,8 @@
 @import "controls/footer";
 @import "controls/pager";
 
+@import "pages/movies-top";
+
 #responsive-page {
   @import "pages/responsive";
   @import "utils/responsive";
