--- a/app/styles/pages/_movies-top.scss
+++ b/app/styles/pages/_movies-top.scss
@@ -1,14 +1,34 @@
 .movies-item {
-  background-color: #fff;
-  min-height: 340px;
-  display: flex;
-}
+  color: $white-color;
+  opacity: 1;
+  transition: opacity 200ms;
 
-.movie-vote {
-  width: 50px;
+  &:hover,
+  &:focus,
+  &:active {
+    color: $white-color;
+    text-decoration: none;
+    outline: none;
+  }
+
+  &:hover {
+    .movie-cover {
+      opacity: 0.7;
+      transition: opacity 200ms;
+    }
+  }
 }
 
 .movie-cover {
-  width: 200px;
-  flex-shrink: 0;
+  width: 300px;
+  height: 450px;
 }
+
+.movie-title {
+
+}
+
+.movie-vote {
+  width: 26px;
+}
+
