--- a/app/styles/utils/_grid.scss
+++ b/app/styles/utils/_grid.scss
@@ -10,6 +10,12 @@
   grid-template-rows: auto;
 }
 
+.grid5 {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+  grid-template-rows: auto;
+}
+
 @each $size in 0, 3, 5, 6, 10, 12, 15, 20, 25, 30, 50, 100, 150 {
   .gg-#{$size} {
     grid-gap: #{$size}px;
